feat: add bcryptjs for password hashing and update package files
- Added bcryptjs as a dependency in package.json and package-lock.json.
- Created types.d.ts for bcryptjs to provide TypeScript definitions.
- Introduced a package.json file for the bcryptjs UMD build.
- Removed unused CSS styles related to password gate icon and text.

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "dev": "npx serve -l 3000",
     "build": "echo 'Static site - no build required'"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.3"
   }
 }
